--- a/FinalTalk_FYP.tex
+++ b/FinalTalk_FYP.tex
@@ -3,8 +3,7 @@
 %\usepackage[utf8]{inputenc}
 \usepackage[english]{babel} 
 \usetheme{Madrid}
-\usepackage{amssymb}
-\usepackage{amsmath}
+\usepackage{amsmath,amssymb,amsthm,mathtools,cool}
 \usepackage{enumitem}
 \usepackage{graphicx}
 \graphicspath{ {./images/} }
@@ -12,9 +11,6 @@
 	\usebeamercolor[fg]{itemize item}
 	\usebeamertemplate{itemize item}}
 \setbeamertemplate{bibliography item}{\insertbiblabel}
-
-\newcommand\norm[1]{\left\lVert#1\right\rVert}
-\newcommand\inner[1]{\langle#1\rangle}
 
 \input{preamble}
 %Information to be included in the title page:
